--- a/index.html
+++ b/index.html
@@ -1,201 +1,99 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title data-i18n="title">MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar</title>
-  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias." />
-
-  <!-- SEO / OG / Twitter -->
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR" />
-  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en" />
-  <link rel="canonical" href="https://malcantara.adv.br/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="MA – Inteligência Jurídica" />
-  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
-  <meta property="og:url" content="https://malcantara.adv.br/" />
-  <meta property="og:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
-  <meta property="og:locale" content="pt_BR" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="MA – Inteligência Jurídica" />
-  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
-  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
-
-  <!-- Performance -->
-  <link rel="preconnect" href="https://www.googletagmanager.com" />
-  <link rel="preload" href="public/assets/logo.svg" as="image" />
-  <link rel="icon" href="public/assets/logo.svg" type="image/svg+xml" />
-
-  <!-- Tailwind -->
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- AOS -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-
-  <!-- GA4 -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){ dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config','G-FNXCNKTCY5');
-  </script>
-
-  <!-- JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"LegalService",
-    "name":"MA – Inteligência Jurídica",
-    "url":"https://malcantara.adv.br/",
-    "logo":"https://malcantara.adv.br/public/assets/logo.svg",
-    "image":"https://malcantara.adv.br/public/assets/logo.svg",
-    "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
-    "telephone":"+55-38-98416-4737",
-    "email":"contato@malcantara.adv.br",
-    "address":{
-      "@type":"PostalAddress",
-      "streetAddress":"Rua Áustria, 61 – Ibituruna",
-      "addressLocality":"Montes Claros",
-      "addressRegion":"MG",
-      "postalCode":"39402-145",
-      "addressCountry":"BR"
-    },
-    "founder":{"@type":"Person","name":"Maurício Alcântara"}
-  }
-  </script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MA Inteligência Jurídica</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', sans-serif;
+    }
+    body {
+      background-color: #faf8f5;
+      color: #1c1c1c;
+      line-height: 1.6;
+    }
+    header {
+      background-color: white;
+      padding: 24px 48px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid #ddd;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+    }
+    .logo img {
+      height: 48px;
+      margin-right: 12px;
+    }
+    nav a {
+      margin-left: 24px;
+      text-decoration: none;
+      color: #1c1c1c;
+      font-weight: 500;
+    }
+    .hero {
+      background-color: #eae6df;
+      padding: 96px 32px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 36px;
+      font-weight: 700;
+      color: #2a2a2a;
+      margin-bottom: 24px;
+    }
+    .hero p {
+      font-size: 18px;
+      color: #3f3f3f;
+      margin-bottom: 40px;
+      max-width: 720px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .hero button {
+      padding: 14px 28px;
+      font-size: 16px;
+      font-weight: 600;
+      color: white;
+      background-color: #d0a153;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .hero button:hover {
+      background-color: #b88b45;
+    }
+  </style>
 </head>
-
-<body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
-
-  <!-- HEADER -->
-  <header class="bg-white shadow-md fixed w-full z-50">
-    <div class="max-w-7xl mx-auto flex items-center justify-between py-3 px-6">
-      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-[120px] w-auto" /></a>
-      <nav class="flex items-center space-x-6 font-semibold text-[#0C2A52]">
-        <a href="#servicos"    class="hover:text-[#C5A268]" data-i18n="menu_services">Serviços</a>
-        <a href="#metodologia" class="hover:text-[#C5A268]" data-i18n="menu_method">Metodologia</a>
-        <a href="#sobre"       class="hover:text-[#C5A268]" data-i18n="menu_about">Quem Somos</a>
-        <a href="#contato"     class="hover:text-[#C5A268]" data-i18n="menu_contact">Contato</a>
-        <a href="blog.html"    target="_blank" rel="noopener" class="hover:text-[#C5A268]" data-i18n="menu_blog">Blog</a>
-        <div class="border-l pl-4 ml-2 flex items-center">
-          <button onclick="setLang('pt')" class="px-1">PT</button> |
-          <button onclick="setLang('en')" class="px-1">EN</button>
-        </div>
-      </nav>
+<body>
+  <header>
+    <div class="logo">
+      <img src="/caminho/para/sua-logo.png" alt="MA Logo">
+      <span><strong>MAURÍCIO ALCÂNTARA</strong><br><small>Inteligência Jurídica</small></span>
     </div>
+    <nav>
+      <a href="#">Serviços</a>
+      <a href="#metodologia">Metodologia</a>
+      <a href="#quem-somos">Quem Somos</a>
+      <a href="#contato">Contato</a>
+      <a href="#blog">Blog</a>
+      <a href="#">PT | EN</a>
+    </nav>
   </header>
 
-  <!-- Spacer for fixed header -->
-  <div class="h-16"></div>
-
-  <!-- HERO -->
-  <section class="pt-32 pb-16 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white text-center">
-    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
-      <h1 class="text-4xl font-bold" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
-      <p class="text-xl max-w-2xl" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
-      <a href="https://wa.me/5538984164737" class="inline-block bg-[#C5A268] text-white font-semibold px-6 py-3 rounded-lg hover:brightness-90" data-i18n="cta_diag">Agendar Diagnóstico</a>
-    </div>
+  <section class="hero">
+    <h1>Inteligência Jurídica com Propósito</h1>
+    <p>Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+    <button onclick="window.location.href='#contato'">Agendar Diagnóstico</button>
   </section>
-
-  <!-- SERVIÇOS -->
-  <section id="servicos" class="py-20 px-6 bg-white scroll-mt-32">
-    <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold mb-10 text-center">Por que escolher a MA?</h2>
-      <p class="text-center mb-12 max-w-3xl mx-auto">
-        Escolher a MA é optar por clareza, firmeza e confiança.
-        Somos uma estrutura de inteligência jurídica formada para empresários, juristas e famílias empresárias que não aceitam soluções superficiais.
-        Trabalhamos para construir perenidade patrimonial, harmonia societária e segurança contratual — com técnica, verdade e visão.
-        Aqui, os valores não são slogans: são cláusulas vivas que sustentam nossos atos.
-      </p>
-      <div class="grid md:grid-cols-3 gap-10">
-        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
-          <h3 class="text-xl font-semibold mb-2" data-i18n="service_contracts_h">Contratos Empresariais</h3>
-          <p data-i18n="service_contracts_p">Proteção jurídica, gestão de riscos e estratégia em instrumentos contratuais personalizados.</p>
-        </div>
-        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
-          <h3 class="text-xl font-semibold mb-2" data-i18n="service_succession_h">Planejamento Sucessório</h3>
-          <p data-i18n="service_succession_p">Organização patrimonial e sucessão harmônica com foco na perenidade familiar.</p>
-        </div>
-        <div class="bg-[#F9F8F6] p-6 rounded-xl shadow-md">
-          <h3 class="text-xl font-semibold mb-2" data-i18n="service_governance_h">Governança Familiar</h3>
-          <p data-i18n="service_governance_p">Estruturação de acordos, protocolos e governança intergeracional.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- METODOLOGIA -->
-  <section id="metodologia" class="py-20 px-6 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white scroll-mt-32">
-    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6">Muito além de um serviço jurídico</h2>
-      <p class="text-lg">
-        Direito com propósito, não rotina.<br/>
-        Na MA – Inteligência Jurídica, não vendemos tempo ou pareceres padronizados. Oferecemos presença estratégica, linguagem precisa e visão de longo prazo. Cada contrato é uma semente de futuro. Cada família empresária, um legado em construção. Atendemos com a firmeza de quem conhece a Lei e a leveza de quem compreende o humano.<br/><br/>
-        Uma advocacia que protege, estrutura e conduz. Com alma.
-      </p>
-    </div>
-  </section>
-
-  <!-- SOBRE -->
-  <section id="sobre" class="py-20 px-6 bg-white text-[#0F172A] scroll-mt-32">
-    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6" data-i18n="about_title">Quem Somos</h2>
-      <p class="text-lg" data-i18n="about_text">
-        A MA nasceu para romper com a advocacia genérica. Criamos soluções sob medida, orientadas por propósito, técnica e inteligência artificial aplicada.
-      </p>
-    </div>
-  </section>
-
-  <!-- CONTATO -->
-  <section id="contato" class="py-20 px-6 bg-[#F8F5F0] scroll-mt-32">
-    <div class="max-w-4xl mx-auto text-center" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6" data-i18n="contact_title">Fale Conosco</h2>
-      <form action="https://formspree.io/f/mayvgkrl" method="POST" class="space-y-6">
-        <input name="nome" type="text" required placeholder="Seu nome" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_name" />
-        <input name="email" type="email" required placeholder="Seu e-mail" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_email" />
-        <textarea name="mensagem" required placeholder="Sua mensagem" class="w-full p-4 border rounded-xl" data-i18n-placeholder="contact_msg"></textarea>
-        <button type="submit" class="bg-[#0C2A52] text-white px-6 py-3 rounded-xl hover:bg-[#C5A268]" data-i18n="contact_send">Enviar</button>
-      </form>
-    </div>
-  </section>
-
-  <!-- RODAPÉ -->
-  <footer class="bg-[#0C2A52] text-white text-sm py-6">
-    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between gap-4">
-      <div>
-        <p>© 2025 MA – Inteligência Jurídica</p>
-        <p>Endereço físico: Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
-        <p>Área de atuação: Advocacia Empresarial</p>
-        <p>Escritório digital (sem atendimento físico fixo)</p>
-      </div>
-      <div class="text-right">
-        <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a></p>
-        <p>+55 38 98416-4737</p>
-      </div>
-    </div>
-  </footer>
-
-  <!-- i18n + AOS -->
-  <script>
-    function setLang(l){ localStorage.setItem('lang',l); location.reload(); }
-    window.addEventListener('DOMContentLoaded', async () => {
-      const lang = localStorage.getItem('lang') || 'pt';
-      document.documentElement.lang = lang;
-      try {
-        const tr = await fetch('./i18n/'+lang+'.json').then(r => r.json());
-        document.querySelectorAll('[data-i18n]').forEach(el => {
-          const k = el.dataset.i18n;
-          if (tr[k]) el.textContent = tr[k];
-        });
-        document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
-          const k = el.dataset.i18nPlaceholder;
-          if (tr[k]) el.placeholder = tr[k];
-        });
-      } catch(e) { console.warn('i18n error', e); }
-      AOS.init({ duration:700, once:true });
-    });
-  </script>
 </body>
 </html>
