--- a/index.html
+++ b/index.html
@@ -1,99 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MA Inteligência Jurídica</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Inter', sans-serif;
-    }
-    body {
-      background-color: #faf8f5;
-      color: #1c1c1c;
-      line-height: 1.6;
-    }
-    header {
-      background-color: white;
-      padding: 24px 48px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border-bottom: 1px solid #ddd;
-    }
-    .logo {
-      display: flex;
-      align-items: center;
-    }
-    .logo img {
-      height: 48px;
-      margin-right: 12px;
-    }
-    nav a {
-      margin-left: 24px;
-      text-decoration: none;
-      color: #1c1c1c;
-      font-weight: 500;
-    }
-    .hero {
-      background-color: #eae6df;
-      padding: 96px 32px;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 36px;
-      font-weight: 700;
-      color: #2a2a2a;
-      margin-bottom: 24px;
-    }
-    .hero p {
-      font-size: 18px;
-      color: #3f3f3f;
-      margin-bottom: 40px;
-      max-width: 720px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .hero button {
-      padding: 14px 28px;
-      font-size: 16px;
-      font-weight: 600;
-      color: white;
-      background-color: #d0a153;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .hero button:hover {
-      background-color: #b88b45;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title data-i18n="title">MA – Inteligência Jurídica | Contratos, Sucessão e Governança Familiar</title>
+  <meta name="description" content="Advocacia empresarial e familiar: contratos personalizados, planejamento sucessório e governança intergeracional para empresas e famílias empresárias." />
+
+  <!-- SEO / OG / Twitter -->
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="pt-BR" />
+  <link rel="alternate" href="https://malcantara.adv.br/" hreflang="en" />
+  <link rel="canonical" href="https://malcantara.adv.br/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="MA – Inteligência Jurídica" />
+  <meta property="og:description" content="Estratégias jurídicas premium para empresas e famílias empresárias." />
+  <meta property="og:url" content="https://malcantara.adv.br/" />
+  <meta property="og:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+  <meta property="og:locale" content="pt_BR" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="MA – Inteligência Jurídica" />
+  <meta name="twitter:description" content="Contratos, sucessão e governança familiar com inteligência." />
+  <meta name="twitter:image" content="https://malcantara.adv.br/public/assets/logo.svg" />
+
+  <!-- Performance -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" />
+  <link rel="preload" href="public/assets/Mauricio-Alcantara-Site.svg" as="image" />
+  <link rel="icon" href="public/assets/Mauricio-Alcantara-Site.svg" type="image/svg+xml" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- AOS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FNXCNKTCY5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config','G-FNXCNKTCY5');
+  </script>
+
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"LegalService",
+    "name":"MA – Inteligência Jurídica",
+    "url":"https://malcantara.adv.br/",
+    "logo":"https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg",
+    "image":"https://malcantara.adv.br/public/assets/Mauricio-Alcantara-Site.svg",
+    "description":"Advocacia empresarial e familiar: contratos, planejamento sucessório e governança familiar.",
+    "telephone":"+55-38-98416-4737",
+    "email":"contato@malcantara.adv.br",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"Rua Áustria, 61 – Ibituruna",
+      "addressLocality":"Montes Claros",
+      "addressRegion":"MG",
+      "postalCode":"39402-145",
+      "addressCountry":"BR"
+    },
+    "founder":{"@type":"Person","name":"Maurício Alcântara"}
+  }
+  </script>
 </head>
-<body>
-  <header>
-    <div class="logo">
-      <img src="/caminho/para/sua-logo.png" alt="MA Logo">
-      <span><strong>MAURÍCIO ALCÂNTARA</strong><br><small>Inteligência Jurídica</small></span>
-    </div>
-    <nav>
-      <a href="#">Serviços</a>
-      <a href="#metodologia">Metodologia</a>
-      <a href="#quem-somos">Quem Somos</a>
-      <a href="#contato">Contato</a>
-      <a href="#blog">Blog</a>
-      <a href="#">PT | EN</a>
-    </nav>
+
+<body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
+  <div class="fixed top-4 right-4 z-50 bg-white shadow-md rounded-md px-4 py-2 text-sm">
+    <button onclick="setLang('en')" class="hover:text-[#C5A268] font-semibold">EN</button>
+  </div>
+
+  <!-- LOGO HEADER FIXO -->
+  <header class="absolute top-6 left-6 z-40">
+    <img src="public/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-20 w-auto" />
   </header>
 
-  <section class="hero">
-    <h1>Inteligência Jurídica com Propósito</h1>
-    <p>Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
-    <button onclick="window.location.href='#contato'">Agendar Diagnóstico</button>
+  <!-- HERO -->
+  <section class="pt-36 pb-20 bg-gradient-to-r from-[#0C2A52] to-[#0A3D91] text-white text-center">
+    <div class="max-w-4xl mx-auto px-4 flex flex-col items-center gap-6" data-aos="fade-down">
+      <h1 class="text-4xl md:text-5xl font-bold leading-tight" data-i18n="hero_title">Inteligência Jurídica com Propósito</h1>
+      <p class="text-xl md:text-2xl max-w-2xl leading-relaxed" data-i18n="hero_sub">Transformamos conhecimento jurídico em estratégias reais para empresas e famílias empresárias. Técnica, sensibilidade e futuro.</p>
+      <a href="https://wa.me/5538984164737" class="mt-6 inline-block bg-[#C5A268] text-white font-semibold px-8 py-3 rounded-xl hover:brightness-90 transition" data-i18n="cta_diag">Agendar Diagnóstico</a>
+    </div>
   </section>
+
+  <!-- MISSÃO -->
+  <section class="bg-[#F8F5F0] py-24">
+    <div class="max-w-5xl mx-auto px-6 text-center" data-aos="fade-up">
+      <h2 class="text-3xl md:text-4xl font-bold text-[#0C2A52] mb-6">Nossa Missão</h2>
+      <p class="text-lg leading-relaxed text-[#1E293B] max-w-3xl mx-auto">
+        Romper com a advocacia genérica e estabelecer uma nova ordem jurídica cognitiva, na qual o conhecimento estratégico, a verdade sensível e a personalização das soluções formam o núcleo de atuação da MA – Inteligência Jurídica. Nosso compromisso é com o que é real, perene e transformador para famílias empresárias e empresas que desejam ir além.
+      </p>
+    </div>
+  </section>
+
+  <script>
+    function setLang(l){ localStorage.setItem('lang', l); location.reload(); }
+    window.addEventListener('DOMContentLoaded', async () => {
+      const lang = localStorage.getItem('lang') || 'pt';
+      document.documentElement.lang = lang;
+      try {
+        const tr = await fetch('./i18n/' + lang + '.json').then(r => r.json());
+        document.querySelectorAll('[data-i18n]').forEach(el => {
+          const k = el.dataset.i18n;
+          if (tr[k]) el.textContent = tr[k];
+        });
+        document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+          const k = el.dataset.i18nPlaceholder;
+          if (tr[k]) el.placeholder = tr[k];
+        });
+      } catch(e) {
+        console.warn('i18n error', e);
+      }
+      AOS.init({ duration: 700, once: true });
+    });
+  </script>
 </body>
 </html>
