--- a/blog.html
+++ b/blog.html
@@ -3,127 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-i18n="blog_title">Blog – MA Inteligência Jurídica</title>
-
-  <link rel="canonical" href="https://malcantara.adv.br/blog.html">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@3.4.4/dist/tailwind.min.css">
-
-  <!-- Marked.js para renderizar Markdown -->
-  <script src="https://cdn.jsdelivr.net/npm/marked@4.3.0/marked.min.js"></script>
+  <title>Blog | MA – Inteligência Jurídica</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
+  <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      AOS.init({ duration: 700, once: true });
+    });
+  </script>
 </head>
-<body class="bg-[#F8F5F0] text-[#0F172A] font-sans">
+<body class="bg-[#F8F5F0] text-[#0C2A52]">
 
-  <!-- Header simples -->
-  <header class="bg-white shadow-md fixed w-full z-50">
-    <div class="max-w-7xl mx-auto flex items-center justify-between py-4 px-6">
-      <a href="/"><img src="public/assets/logo.svg" alt="MA – Inteligência Jurídica" class="h-14 w-auto"></a>
-      <div class="flex items-center space-x-4">
-        <a href="/" class="text-sm text-[#002B5C] underline" data-i18n="back_button">← Voltar</a>
-        <button onclick="setLang('pt')" class="px-1">PT</button>|
-        <button onclick="setLang('en')" class="px-1">EN</button>
-      </div>
-    </div>
+  <!-- Header -->
+  <header class="fixed top-0 w-full z-40 bg-white/80 backdrop-blur-md shadow-sm px-6 py-4 flex items-center justify-between">
+    <a href="/">
+      <img src="/assets/Mauricio-Alcantara-Site.svg" alt="MA – Inteligência Jurídica" class="h-10 w-auto max-w-[160px]">
+    </a>
+    <nav class="hidden md:flex gap-6 text-sm font-semibold">
+      <a href="/index.html#servicos" class="hover:text-[#C5A268]">Serviços</a>
+      <a href="/index.html#metodologia" class="hover:text-[#C5A268]">Metodologia</a>
+      <a href="/index.html#missao" class="hover:text-[#C5A268]">Missão</a>
+      <a href="/index.html#contato" class="hover:text-[#C5A268]">Contato</a>
+      <button onclick="setLang('en')" class="hover:text-[#C5A268]">EN</button>
+    </nav>
   </header>
 
-  <!-- Espaço para o header fixo -->
-  <div class="h-20"></div>
+  <main class="pt-32 px-6 pb-24 max-w-6xl mx-auto">
+    <h1 class="text-4xl font-bold mb-12 text-center">Insights Jurídicos</h1>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
 
-  <!-- Lista de posts -->
-  <main id="postList" class="max-w-3xl mx-auto px-6 py-16"></main>
+      <!-- Post modelo -->
+      <a href="#" class="bg-white rounded-lg shadow hover:shadow-md transition overflow-hidden" data-aos="fade-up">
+        <img src="/assets/placeholder.jpg" alt="Capa do artigo" class="w-full h-48 object-cover">
+        <div class="p-6">
+          <h2 class="text-xl font-semibold mb-2">Planejamento Sucessório: por que importa?</h2>
+          <p class="text-sm text-gray-700">Organizar a sucessão patrimonial evita conflitos familiares e garante a continuidade dos negócios...</p>
+        </div>
+      </a>
 
-  <!-- Modal do post -->
-  <div id="modal" class="fixed inset-0 bg-black/60 hidden items-start overflow-auto z-50">
-    <article id="postContent" class="bg-white max-w-3xl mx-auto mt-20 mb-16 p-8 rounded-xl shadow-lg prose">
-    </article>
-  </div>
+      <!-- + outros posts podem ser adicionados aqui -->
 
-  <script>
-    // idioma e função de troca
-    function setLang(l){
-      localStorage.setItem('lang', l);
-      location.reload();
-    }
-    const lang = (localStorage.getItem('lang')||'pt').slice(0,2);
-    document.documentElement.lang = lang;
+    </div>
+  </main>
 
-    // carrega traduções
-    fetch('/i18n/'+lang+'.json')
-      .then(r=>r.json())
-      .then(tr=>{
-        document.querySelectorAll('[data-i18n]').forEach(el=>{
-          const k = el.dataset.i18n;
-          if(tr[k]) el.textContent = tr[k];
-        });
-      })
-      .catch(console.warn);
+  <!-- Rodapé -->
+  <footer class="bg-[#0C2A52] text-white text-sm py-8 px-6">
+    <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between gap-4">
+      <div>
+        <p>© 2025 MA – Inteligência Jurídica</p>
+        <p>Rua Áustria, 61 – Ibituruna – Montes Claros/MG</p>
+        <p><a href="mailto:contato@malcantara.adv.br" class="underline">contato@malcantara.adv.br</a> • +55 38 98416-4737</p>
+      </div>
+      <div>
+        <a href="/index.html" class="underline">Voltar ao Início</a>
+      </div>
+    </div>
+  </footer>
 
-    // configuração GitHub
-    const owner = "Malcantara-IA";
-    const repo  = "ma-site";
-    const api   = `https://api.github.com/repos/${owner}/${repo}/contents/posts`;
-
-    const list  = document.getElementById('postList');
-    const modal = document.getElementById('modal');
-    const art   = document.getElementById('postContent');
-
-    // YAML front-matter simples
-    function parseYAML(text){
-      const obj = {};
-      text.trim().split('\n').forEach(l=>{
-        const idx = l.indexOf(':');
-        if(idx>0){
-          const k = l.slice(0,idx).trim();
-          const v = l.slice(idx+1).trim().replace(/^["']|["']$/g,'');
-          obj[k]=v;
-        }
-      });
-      return obj;
-    }
-
-    // busca posts no GitHub
-    fetch(api)
-      .then(r=>r.json())
-      .then(async files=>{
-        const posts = [];
-        for(const f of files){
-          if(!f.name.endsWith('.md')) continue;
-          const raw = await fetch(f.download_url).then(r=>r.text());
-          const fm  = raw.match(/^---([\s\S]*?)---/);
-          if(!fm) continue;
-          const meta = parseYAML(fm[1]);
-          posts.push({
-            date: meta.date || '1970-01-01',
-            title_pt: meta.title_pt || meta.title || f.name,
-            title_en: meta.title_en || meta.title || f.name,
-            content: raw.replace(fm[0],'').trim()
-          });
-        }
-        posts.sort((a,b)=>b.date.localeCompare(a.date));
-        posts.forEach(p=>{
-          const card = document.createElement('div');
-          card.className="bg-white p-6 rounded-xl shadow-md mb-8 cursor-pointer hover:shadow-lg";
-          card.innerHTML = `
-            <h2 class="text-2xl font-bold mb-2">${lang==='en'?p.title_en:p.title_pt}</h2>
-            <p class="text-sm text-gray-500 mb-2">${p.date}</p>
-            <p class="text-[#002B5C] underline" data-i18n="read_more">Ler artigo</p>
-          `;
-          card.onclick = ()=>openPost(p);
-          list.appendChild(card);
-        });
-      });
-
-    function openPost(p){
-      art.innerHTML = `
-        <button class="float-right text-xl" onclick="closePost()">✕</button>
-        <h1 class="mt-0">${lang==='en'?p.title_en:p.title_pt}</h1>
-        <p class="text-sm text-gray-500 mb-4">${p.date}</p>
-        ${marked.parse(p.content)}
-      `;
-      modal.classList.remove('hidden');
-    }
-    function closePost(){
-      modal.classList.add('hidden');
-    }
-  </script>
 </body>
 </html>
